force-app/main/default/objects/Schedule_setup__c/Schedule_setup__c.object-meta.xml
<CustomObject>
    <label>Schedule setup</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Schedule setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>