force-app/main/default/objects/Schedule_setup__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Schedule setups</relationshipLabel>
    <relationshipName>Schedule_setups</relationshipName>
    <type>Lookup</type>
</CustomField>