force-app/main/default/objects/Schedule_setup__c/fields/Next_Appointment_date__c.field-meta.xml
<CustomField>
    <fullName>Next_Appointment_date__c</fullName>
    <label>Next Appointment date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>