force-app/main/default/objects/Schedule_setup__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>End_Time__c  - Start_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>